<resources>
    <string name="app_name">Proyecto2_APP</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="correo">CORREO</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="contraseña_input">Contraseña</string>
    <string name="no_recuerdas_la_contrase_a">¿No recuerdas la contraseña?</string>
    <string name="entrar">ENTRAR</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_de_usuario">NOMBRE DE USUARIO</string>
    <string name="ya_tienes_cuenta">Ya tienes cuenta?</string>
    <string name="foto1">Foto 1</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones establecidos en el acuerdo de usuario.</string>
    <string name="foto2">Foto 2</string>
    <string name="foto3">Foto 3</string>
    <string name="foto4">Foto 4</string>
    <string name="foto5">Foto 5</string>
    <string name="mantener_sesion_iniciada">Mantener sesión iniciada</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="subir_foto">Subir foto</string>
    <string name="publicar">Publicar</string>
    <string name="nuevo_post">Nuevo POST</string>

    <string name="foto6">Foto 6</string>
    <string name="selecciona_una_opci_n">Selecciona una opción</string>
    <string name="selecciona_una_opcion_del_desplegable">Selecciona una opción del desplegable</string>
    <string name="tipo_de_cuenta">TIPO DE CUENTA</string>
    <string name="queremos_saber_mas_sobre_ti">Queremos saber más sobre ti!</string>
    <string name="actividad_de_la_cuenta">Actividad de la cuenta</string>
    <string name="me_gusta">Me gusta</string>
    <string name="mis_me_gustas">Mis me gustas</string>
    <string name="datos_mascota">Datos mascota</string>
    <string name="tipo_de_mascota">Tipo de mascota</string>
    <string name="escribe_el_tipo_de_mascota">Escribe el tipo de mascota</string>
    <string name="raza">Raza</string>
    <string name="escribe_la_raza">Escribe la raza</string>
    <string name="nombre_mascota">Nombre</string>
    <string name="escribe_el_nombre">Escribe el nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="sexo">Sexo</string>
    <string name="escribe_hembra_o_macho">Escribe &apos;Hembra&apos; o &apos;Macho&apos;</string>
    <string name="tama_o">Tamaño</string>
    <string name="escribe_peque_o_mediano_o_grande">Escribe &apos;Pequeño&apos;, &apos;Mediano&apos; o &apos;Grande&apos;</string>
    <string name="a_adir_foto">Añadir foto</string>
    <string name="a_adir_foto_mascota">Añadir foto</string>
    <string name="atr_s">Atrás</string>
    <string name="guardar">Guardar</string>
    <string name="atras">atras</string>
    <string name="ajustes">Ajustes</string>
    <string name="configuraci_n_de_la_cuenta">Configuración de la cuenta</string>
    <string name="actividad">Actividad</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="buscar">Buscar</string>
    <string name="configuracion_de_la_cuenta">Configuración de la cuenta</string>
    <string name="privacidad">Privacidad</string>
    <string name="cuenta_privada">Cuenta privada</string>
    <string name="cuenta">Cuenta</string>
    <string name="preferencias">Preferencias</string>
    <string name="idioma">Idioma</string>
    <string name="tema">Tema</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="editar_perfil_titulo">Editar Perfil</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="nombre_editar_perfil">Nombre:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="mis_me_gusta">Mis Me Gusta</string>
    <string name="usuario">Usuario</string>
    <string name="escribe_algo_aqu">Escribe algo aquí...</string>
    <string name="perfil">Perfil</string>
    <string name="usuario_perfil">usuario</string>
    <string name="descripcion">Descripción</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguidos">Seguidos</string>
    <string name="publicaciones_buttom">PUBLICACIONES</string>
    <string name="mascotas_button">MASCOTAS</string>
    <string name="destacado">Destacado</string>
    <string name="petmatch">PetMatch</string>
    <string name="nombre_mascota_item">Nombre Mascota</string>
    <string name="nombre_mascota_item_perfil">Nombre de la mascota</string>
    <string name="tipo_raza">Tipo - Raza</string>
    <string name="nombre_de_usuario_post">Nombre de usuario</string>
    <string name="esta_es_una_descripci_n_del_post">Esta es una descripción del post...</string>
    <string name="_123_me_gusta">123 Me gusta</string>
    <string name="usuario_buscar">Usuario</string>
    <string name="mis_miscotas">Mis Mascotas</string>
    <string name="agregar_mascota">Agregar Mascota</string>
</resources>