<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ajustes">

    <LinearLayout
        android:id="@+id/AjustesBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/AtrasButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/atras"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/atras"/>

        <TextView
            android:id="@+id/TextAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/ajustes"
            android:textSize="45dp"
            android:fontFamily="@font/lalezar_regular"
            android:textColor="@color/black"/>

    </LinearLayout>

    <!-- Primera fila: Configuración de la cuenta -->
    <LinearLayout
        android:id="@+id/rowConfigCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_background"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/AjustesBar">

        <!-- Texto -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/configuraci_n_de_la_cuenta"
            android:textSize="16sp"
            android:textColor="#333333"
            android:paddingStart="16dp" />

        <!-- Icono de flecha -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flecha_derecha"
            android:paddingEnd="16dp"
            app:tint="#999999" />
    </LinearLayout>

    <!-- Segunda fila: Actividad -->
    <LinearLayout
        android:id="@+id/rowActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_background"
        app:layout_constraintTop_toBottomOf="@id/rowConfigCuenta">

        <!-- Texto -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/actividad"
            android:textSize="16sp"
            android:textColor="#333333"
            android:paddingStart="16dp" />

        <!-- Icono de flecha -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flecha_derecha"
            android:paddingEnd="16dp"
            app:tint="#999999" />
    </LinearLayout>

    <!-- Tercera fila: Editar perfil -->
    <LinearLayout
        android:id="@+id/rowEditarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_background"
        app:layout_constraintTop_toBottomOf="@id/rowActividad">

        <!-- Texto -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editar_perfil"
            android:textSize="16sp"
            android:textColor="#333333"
            android:paddingStart="16dp" />

        <!-- Icono de flecha -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flecha_derecha"
            android:paddingEnd="16dp"
            app:tint="#999999" />
    </LinearLayout>

    <Button
        android:id="@+id/bnCerrarSession"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:backgroundTint="@color/letra_boton_naranja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowEditarPerfil"
        app:layout_constraintVertical_bias="0.944" />


</androidx.constraintlayout.widget.ConstraintLayout>