<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja_fondo_yboton"
    tools:context=".Registrarse">


    <!-- Título -->
    <TextView
        android:id="@+id/txtRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_bold_italic"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txtInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ya_tienes_cuenta"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegistrarse" />

    <TextView
        android:id="@+id/txtIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/inicia_sesion"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtInicioSesion"
        app:layout_constraintTop_toBottomOf="@id/txtRegistrarse" />

    <!-- Input Nombre Usuario -->


    <!-- Input Correo -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/nombre_de_usuario"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtIniciarSesion" />

    <EditText
        android:id="@+id/NomUser"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_input"
        android:hint="@string/nombre"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtIniciarSesion" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/correo"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NomUser" />

    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_input"
        android:hint="@string/correo_electronico"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NomUser" />

    <!-- Label Contraseña -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textSize="14sp"
        android:fontFamily="@font/lato_black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/edtCorreo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"/>

    <!-- Input Contraseña -->
    <EditText
        android:id="@+id/edtContrasena"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/contraseña_input"
        android:background="@drawable/rounded_input"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtCorreo"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"/>



    <!--

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="739dp"
        android:layout_margin="32dp"
        android:background="#FFA500"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Regístrate"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/ya_tienes_cuenta_inicia_sesion"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/nombre_de_usuario"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/contraseña_input"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/terms_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/acepto_los_t_rminos_y_condiciones"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/siguiente"
            android:textColor="#FFA500"
            android:textStyle="bold" />

    </LinearLayout>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>
