<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_naranja"
    tools:context=".MasSobreUser">

    <!-- Título -->
    <TextView
        android:id="@+id/txtSaberMas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/queremos_saber_mas_sobre_ti"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_bold_italic"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/tipoCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/tipo_de_cuenta"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSaberMas" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipoCuenta"
        app:boxBackgroundMode="filled"
        style="@style/Radius">

        <AutoCompleteTextView
            android:id="@+id/dropdownOpciones"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:hint="@string/selecciona_una_opci_n"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>