<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadAjustes">

    <LinearLayout
        android:id="@+id/ActividadBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingStart="5dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/AtrasButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/atras"
            android:contentDescription="atras"
            android:backgroundTint="@color/white"/>

        <TextView
            android:id="@+id/TextAjustes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/actividad_de_la_cuenta"
            android:textSize="30dp"
            android:fontFamily="@font/lalezar_regular"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/TextLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/lalezar_regular"
        android:text="@string/me_gusta"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActividadBar" />

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_background"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/TextLikes">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mis_me_gustas"
            android:textSize="16sp"
            android:textColor="#333333"
            android:paddingStart="16dp" />

        <!-- Icono de flecha -->
        <ImageView
            android:id="@+id/btnPostLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flecha_derecha"
            android:paddingEnd="16dp"
            app:tint="#999999" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>